// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Redact Basic 1`] = `
Array [
  Array [
    Object {
      "data": Object {
        "secret": "🧱🧱🧱🧱",
      },
      "level": 50,
      "msg": undefined,
      "time": 2009-02-13T23:31:30.000Z,
    },
  ],
  Array [
    Object {
      "level": 50,
      "msg": "trustno1",
      "time": 2009-02-13T23:31:30.000Z,
    },
  ],
]
`;

exports[`Redact Crashy 1`] = `
Array [
  Object {
    "data": Object {
      "LOG_REDACTOR_CRASH": "TypeError: Cannot assign to read only property 'jwt' of object '#<Object>'
    at specialSet (~/block65/logger/node_modules/.pnpm/fast-redact@3.1.2/node_modules/fast-redact/lib/modifiers.js:150:12)
    at nestedRedact (~/block65/logger/node_modules/.pnpm/fast-redact@3.1.2/node_modules/fast-redact/lib/modifiers.js:73:7)
    at Object.eval (eval at redactor (~/block65/logger/node_modules/.pnpm/fast-redact@3.1.2/node_modules/fast-redact/lib/redactor.js:9:18), <anonymous>:17:11)",
      "LOG_REDACTOR_CRASH_KEYS": Array [
        "someSpecialObject",
      ],
    },
    "level": 50,
    "msg": "the data contains a special frozen object",
    "time": 2009-02-13T23:31:30.000Z,
  },
]
`;
